--- a/src/main/resources/view/LoginForm.fxml
+++ b/src/main/resources/view/LoginForm.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="487.0" prefWidth="468.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.LoginFormController">
+<AnchorPane fx:id="root" prefHeight="487.0" prefWidth="468.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.Controller.LoginFormController">
     <children>
       <AnchorPane layoutX="1.0" layoutY="1.0" prefHeight="486.0" prefWidth="472.0" style="-fx-background-color: #90CAF9; -fx-background-radius: 15;">
          <children>
